<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view"
            type="com.portablesalescounterapp.ui.login.LoginView" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="90dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/textUsername"
            android:layout_above="@+id/textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="216dp"
            android:layout_above="@+id/email_sign_in_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/signin"
                android:imeOptions="actionUnspecified"
                android:hint="@string/enter_password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/login_guest"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> view.onLoginButtonClicked()}"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="Log In"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_guest"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_above="@+id/button_sign_up"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> view.onLoginGuestClicked()}"
            android:padding="10dp"
            android:text="Customer Pre-Shopping"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button_sign_up"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:onClick="@{()-> view.onRegisterButtonClicked()}"
            android:padding="10dp"
            android:text="Sign Up New Account"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/forgot"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:onClick="@{()-> view.onForgotPasswordButtonClicked()}"
            android:padding="10dp"
            android:text="Forgot Password"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/textUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:background="@mipmap/ic_launcher"
            />

    </RelativeLayout>
</layout>